<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.a1005269.synthesizer.SynthesizerActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aButton"
            android:id="@+id/aButton"
            android:onClick="onButton1Click"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/highfButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bButton"
            android:id="@+id/bButton"
            android:onClick="onButton2Click"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/highfsButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbButton"
            android:id="@+id/bbButton"
            android:onClick="onButton3Click"
            android:layout_below="@+id/aButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/aButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cButton"
            android:id="@+id/cButton"
            android:onClick="onButton4Click"
            android:layout_below="@+id/bButton"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/bButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csButton"
            android:id="@+id/csButton"
            android:onClick="onButton5Click"
            android:layout_below="@+id/cButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/bbButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dButton"
            android:id="@+id/dButton"
            android:onClick="onButton6Click"
            android:layout_below="@+id/bbButton"
            android:layout_alignEnd="@+id/eButton"
            android:layout_alignStart="@+id/cButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dsButton"
            android:id="@+id/dsButton"
            android:onClick="onButton7Click"
            android:layout_below="@+id/csButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/csButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eButton"
            android:id="@+id/eButton"
            android:onClick="onButton8Click"
            android:layout_below="@+id/dButton"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/cButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fButton"
            android:id="@+id/fButton"
            android:onClick="onButton9Click"
            android:layout_below="@+id/dsButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/dsButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gButton"
            android:id="@+id/gButton"
            android:onClick="onButton10Click"
            android:layout_above="@+id/gsButton"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/eButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gsButton"
            android:id="@+id/gsButton"
            android:onClick="onButton11Click"
            android:layout_below="@+id/fButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/fButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/higheButton"
            android:id="@+id/higheButton"
            android:onClick="onButton12Click"
            android:layout_alignTop="@+id/gsButton"
            android:layout_alignEnd="@+id/gButton"
            android:layout_alignStart="@+id/gButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highfButton"
            android:id="@+id/highfButton"
            android:onClick="onButton13Click"
            android:layout_below="@+id/gsButton"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highfsButton"
            android:id="@+id/highfsButton"
            android:onClick="onButton14Click"
            android:layout_below="@+id/higheButton"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highgButton"
            android:id="@+id/highgButton"
            android:onClick="onButton15Click"
            android:layout_below="@+id/highfButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/highfButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mchallenge1"
            android:id="@+id/mChallenge1Button"
            android:onClick="onmChallenge1Click"
            android:nestedScrollingEnabled="true"
            android:layout_alignTop="@+id/highgButton"
            android:layout_alignEnd="@+id/highfsButton"
            android:layout_alignStart="@+id/highfsButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Choose the note and how many times you want it to play."
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_below="@+id/mChallenge3Button"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mChallenge2"
            android:id="@+id/mChallenge2Button"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:onClick="onmChallenge2Click" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Times played"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/np2"
            android:layout_alignEnd="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Note Played"
            android:id="@+id/textView3"
            android:layout_alignTop="@+id/np1"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mChallenge3"
            android:id="@+id/mChallenge3Button"
            android:layout_below="@+id/highgButton"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/highgButton"
            android:onClick="onmChallenge3Click" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mChallenge4"
            android:id="@+id/mChallenge4Button"
            android:onClick="onmChallenge4Click"
            android:layout_below="@+id/textView1"
            android:layout_toStartOf="@+id/np3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Choose the note and how many times you want it to play."
            android:id="@+id/textView1"
            android:textAlignment="center"
            android:layout_below="@+id/np2"
            android:layout_centerHorizontal="true" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/np1"
            android:layout_above="@+id/textView1"
            android:layout_alignEnd="@+id/highfButton" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/np2"
            android:layout_above="@+id/textView1"
            android:layout_alignStart="@+id/bButton" />
    </RelativeLayout>
</ScrollView>